burger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mypizza-eatsout-burger-deployment
  labels:
    app: mypizza-eatsout-burger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mypizza-eatsout-burger
  template:
    metadata:
      labels:
        app: mypizza-eatsout-burger
    spec:
      containers:
        - name: mypizza-eatsout-burger
          image: tomarosa/burger:1.0.0-release
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mypizza-eatsout-burger-service
spec:
  selector:
    app: mypizza-eatsout-burger
  ports:
    - name: mypizza-eatsout-burger-service-port
      protocol: TCP
      port: 80
      targetPort: 80
