pizza-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mypizza-eatsout-pizza-deployment
  labels:
    app: mypizza-eatsout-pizza
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mypizza-eatsout-pizza
  template:
    metadata:
      labels:
        app: mypizza-eatsout-pizza
    spec:
      containers:
        - name: mypizza-eatsout-pizza
          image: tomarosa/pizza:1.0.0-release
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mypizza-eatsout-pizza-service
spec:
  selector:
    app: mypizza-eatsout-pizza
  ports:
    - name: mypizza-eatsout-pizza-service-port
      protocol: TCP
      port: 80
      targetPort: 80
