tacos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mypizza-eatsout-tacos-deployment
  labels:
    app: mypizza-eatsout-tacos
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mypizza-eatsout-tacos
  template:
    metadata:
      labels:
        app: mypizza-eatsout-tacos
    spec:
      containers:
        - name: mypizza-eatsout-tacos
          image: tomarosa/tacos:1.0.0-release
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mypizza-eatsout-tacos-service
spec:
  selector:
    app: mypizza-eatsout-tacos
  ports:
    - name: mypizza-eatsout-tacos-service-port
      protocol: TCP
      port: 80
      targetPort: 80
